[package]
name = "wez_lang"
version = "0.1.0"
edition = "2021"
description = "The Wez programming language - interpreter & compiler"
license-file = "None, for the time being"
repository = "https://github.com/wmuth/wez_lang"
keywords = ["interpreter", "compiler", "language"]
categories = ["compilers"]

[lib]
name = "wez_lang_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "repl"
path = "src/repl/main.rs"

[[bin]]
name = "compiler"
path = "src/compiler/main.rs"

[dependencies]
