[package]
categories = ["compilers"]
description = "The Wez programming language - interpreter & compiler"
edition = "2021"
keywords = ["interpreter", "compiler", "language"]
license-file = "None, for the time being"
name = "wez_lang"
repository = "https://github.com/wmuth/wez_lang"
version = "0.1.0"

[[bin]]
name = "repl"
path = "src/repl/main.rs"

[[bin]]
name = "compiler"
path = "src/compiler/main.rs"

[[bin]]
name = "bench"
path = "src/bench/main.rs"

[lib]
name = "wez_lang_lib"
path = "src/lib/lib.rs"

[dependencies]

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

